[project]
name = "j4rvis"
version = "0.1.0"
description = "Second project created during summer break. Enjoy!"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ollama>=0.6.1",
    "openai-whisper",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }
